force-app/main/default/objects/Team__c/fields/BUnew__c.field-meta.xml
<CustomField>
    <fullName>BUnew__c</fullName>
    <label>BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liste_des_BU</valueSetName>
    </valueSet>
</CustomField>