force-app/main/default/objects/Team__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Groupe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Groupe</valueSetName>
    </valueSet>
</CustomField>