force-app/main/default/objects/Team__c/fields/GsuiteGroup__c.field-meta.xml
<CustomField>
    <fullName>GsuiteGroup__c</fullName>
    <description>Permet d&#39;affecter le bon Teamdrive google</description>
    <label>Groupe Gsuite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>bu.novaa@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.tmc@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.incityz@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.condillac@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.lec.lille@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.goneo@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.olacompta@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.lnec@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.onlicorn@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.ocompta@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.cosi@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.evocompta.metz@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.evocompta.nancy@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.up.expert@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.lec.valenciennes@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.confluence.nantes@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.confluence.rennes@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.pepit.strasbourg@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.pepit.rouen@tiime.fr</fullName>
            </value>
            <value>
                <fullName>bu.production@tiime.fr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>