force-app/main/default/objects/Team__c/fields/SU__c.field-meta.xml
<CustomField>
    <fullName>SU__c</fullName>
    <label>SU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liste_des_SU</valueSetName>
    </valueSet>
</CustomField>