force-app/main/default/objects/Team__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liste_des_Teams</valueSetName>
    </valueSet>
</CustomField>